--- a/worsttweet/templates/random_favorite.html
+++ b/worsttweet/templates/random_favorite.html
@@ -5,12 +5,22 @@
 	<title>Random Mean Tweet</title>
 </head>
 <body>
-<img src="{{ user_info.profile_image_url }}">
-<h1>Here is a random favorite tweet about {{ random_tweet.search_term }}:</h1>
-<h2>@{{ user_info.screen_name }} said:
+<h2 visibility: {{ hidden }}>Thanks for voting! That tweet now has a score of {{ new_upvote_count }}</h2>
+<img src="{{ random_tweet.user_profile_pic_url }}">
+<h1>Here is a mean tweet about {{ random_tweet.search_term }}:</h1>
+<h2>@{{ random_tweet.twitter_screen_name }} said:
 <p>{{ random_tweet.tweet_text }}</p>
-<p>This... lovely... person has {{ user_info.followers_count }} followers.</p>
-<p>{{ random_tweet.upvote_count }} people have liked this tweet</p>
+<p>This {{ nice_term }} has {{ random_tweet.user_followers_count }} followers.</p>
+<form method="POST" action="/mean/viewfav/upvote">
+	<input hidden name="tweet_id" value="{{ random_tweet.tweet_id }}"></input>
+	<button>Like this!</button> 
+{% csrf_token %}
+</form>
+<form method="POST" action="/mean/viewfav/downvote">
+	<input hidden name="tweet_id" value="{{ random_tweet.tweet_id }}"></input>
+	<button>Dislike this!</button> 
+{% csrf_token %}
+</form>
 
 <a href={% url "view_random" %}><br>View a random favorite</a>
 </body>
