Refactor to remove calls to Twitter API other than search.

--- a/worsttweet/templates/search_results.html
+++ b/worsttweet/templates/search_results.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	{% if favorite_button_visible == "hidden" %}
-		<h1>Your search result for {{ search_term }} has been added to the favorites list.</h1>
+		<h1>This search result for {{ search_term }} has been added to the favorites list.</h1>
 		{% if upvote_count == 1 %}
 		<p>You are the first person to like this post!</p>
 		{% else %}
