--- a/worsttweet/templates/top_tweets.html
+++ b/worsttweet/templates/top_tweets.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <h1>Top tweets of all time.</h1>
-{% for top_tweet, top_user in top_tweets%}
-<h1>{{ forloop.counter }}. @{{ top_user.screen_name }}
+{% for top_tweet in top_tweets%}
+<h1>{{ forloop.counter }}. @{{ top_tweet.twitter_screen_name }}
  had this to say about {{ top_tweet.search_term }}:</h1>
-<img src="{{ top_user.profile_image_url }}">
+<img src="{{ top_tweet.user_profile_pic_url }}">
 <p>{{ top_tweet.tweet_text }}</p>
-<p>This lovely person has {{ top_user.followers_count }} followers.</p>
+<p>This lovely person has {{ top_tweet.user_followers_count }} followers.</p>
 <p>{{ top_tweet.upvote_count }} people have liked this tweet</p>
 {% endfor %}
 
