Refactor HTML to use if statements instead of hidden attribute

--- a/worsttweet/templates/home.html
+++ b/worsttweet/templates/home.html
@@ -11,5 +11,6 @@
 	{% csrf_token %}
 </form>
 <a href={% url "view_random" %}><br>View a random favorite</a>
+<a href={% url "view_top" %}><br>View the top tweets of all time</a>
 </body>
 </html>
