--- a/worsttweet/templates/top_tweets.html
+++ b/worsttweet/templates/top_tweets.html
@@ -16,5 +16,6 @@
 {% endfor %}
 
 <a href={% url "view_random" %}><br>View a random favorite</a>
+<a href={% url "home" %}><br>Return Home</a>
 </body>
 </html>
