--- a/worsttweet/templates/random_favorite.html
+++ b/worsttweet/templates/random_favorite.html
@@ -23,5 +23,7 @@
 </form>
 
 <a href={% url "view_random" %}><br>View a random favorite</a>
+<a href={% url "home" %}><br>Return Home</a>
+<a href={% url "view_top" %}><br>View the top tweets of all time</a>
 </body>
 </html>
