--- a/worsttweet/templates/base.html
+++ b/worsttweet/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -8,16 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-	{% block title %}
-	{% endblock %}
+	<title>Meanest Tweet</title>
 	<link rel="shortcut icon" href="/static/bootstrap/images/favicon.ico"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="/static/bootstrap/css/custom-style.css" rel="stylesheet">
-
+	<link href="/static/bootstrap/css/custom-style.css" rel="stylesheet">
+{% block title %}
+{% endblock %}
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -26,37 +27,44 @@
     <![endif]-->
 
 </head>
-
 <body>
+<div class="bs-docs-section clearfix">
+  <div class="row">
+	<div class="col-lg-12">
+		<div class="bs-component">
+		  <nav class="navbar navbar-default">
+			<div class="container-fluid">
+			  <div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				  <span class="sr-only">Toggle navigation</span>
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href={% url "home" %}>Mean Tweets</a>
+			  </div>
 
-{% block content %}
-<!-- Page Content -->
-{% endblock %}
-	
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-				<a href = "#">
-                    <h4>Back to top</h4>
-				</a>
-				<p><br>Built with Bootstrap, powered by Django 1.8</p>
-				</div>
-            </div>
-            <!-- /.row -->
-        </footer>
-
+			  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+				  <li><a href={% url "home" %}>Search</a></li>
+				  <li><a href={% url "view_random" %}>Favorites</a></li>
+				  <li><a href={% url "view_top" %}>Top 10</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+				  <li><a href="http://andybowling.com">&#169 Andy Bowling</a></li>
+				</ul>
+			  </div>
+			</div>
+		  </nav>
+		</div>
     </div>
-    <!-- /.container -->
-
-    <!-- jQuery -->
-    <script src="/static/bootstrap/js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-
+  </div>
+</div>
+{% block page_content %}
+{% endblock %}
+	<!-- Javascript -->
+    <script src="/static/bootstrap/js/jquery-1.js"></script>
+    <script src="/static/bootstrap/js/bootstrap.js"></script>
+    <script src="/static/bootstrap/js/custom.js"></script>
 </body>
-
 </html>
