--- a/worsttweet/templates/base.html
+++ b/worsttweet/templates/base.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 <div class="bs-docs-section clearfix">
-  <div class="row">
+  <div class="row" id="top">
 	<div class="col-lg-12">
 		<div class="bs-component">
 		  <nav class="navbar navbar-default">
@@ -59,7 +59,7 @@
 		</div>
     </div>
   </div>
-</div>
+<!-- </div> -->
 {% block page_content %}
 {% endblock %}
 	<!-- Javascript -->
