--- a/worsttweet/templates/insufficient.html
+++ b/worsttweet/templates/insufficient.html
@@ -6,7 +6,7 @@
 
 {% block page_content %}
 <div align="center" class="page-header">
-	<h1>ENTER A SEARCH TERM</h1>
+	<h1>WELCOME TO THE MEANTWEETS</h1>
 </div>
 <div class="container">
 	<div class="jumbotron">
