--- a/worsttweet/templates/top_tweets.html
+++ b/worsttweet/templates/top_tweets.html
@@ -45,4 +45,8 @@
 	</div>
   </div>
 {% endfor %}
+<div class="container">
+	<div class="back-to-top" align="right">
+	<h3><a href="#top">Back to top</a></h3>
+</div></div>
 {% endblock %}
