--- a/worsttweet/static/bootstrap/css/custom-style.css
+++ b/worsttweet/static/bootstrap/css/custom-style.css
@@ -34,6 +34,10 @@
 	font-size: 20px;
 }
 
+.home-description{
+	margin-top: 30px;
+}
+
 blockquote.twitter-tweet {
   display: inline-block;
   font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
