--- a/worsttweet/templates/home.html
+++ b/worsttweet/templates/home.html
@@ -5,13 +5,13 @@
 {% endblock %}
 
 {% block page_content %}
-<div align="center" class="page-header">
-	<h1>WELCOME TO THE MEAN TWEETS</h1>
+<div  align="center" class="page-header">
+	<h1 id="header-text">WELCOME TO THE MEAN TWEETS</h1>
 </div>
 <div class="container">
   <div class="jumbotron">
 	<div class="container">
-		<h3 align="justify">There are 7 billion people on earth, each lovely in their own way.
+		<h3 align="justify" class="home-description">There are 7 billion people on earth, each lovely in their own way.
 		Twitter has made it possible for the lovliest of these folks to share
 		 their informed, kind thoughts in the most public of forums.</h3>
 		 <h2 align="center"><b>Find out what they have to say.</b></h2><br>
@@ -28,8 +28,8 @@
 	<br>
 	<h3>Or check out the nicest, most cheerful tweets others have found:</h3>
 	<br>
-	<a href= {% url "view_random" %}><button class="red-button" style="margin-right:50px">View Favorite Tweets</button></a>
-	<a href= {% url "view_top" %}><button class="red-button">View Top Tweets Of All Time</button></a>
+	<a href= {% url "view_random" %}><button id="home-view-fav" class="red-button" style="margin-right:50px">View Favorite Tweets</button></a>
+	<a href= {% url "view_top" %}><button id="home-view-top" class="red-button">View Top Tweets Of All Time</button></a>
 	</div>
 	<div class="container" align="center" style="margin-top:40px">
 		<a  href={% url "home" %}> <img src="/static/images/logo.png"> </a>
