--- a/worsttweet/templates/home.html
+++ b/worsttweet/templates/home.html
@@ -19,7 +19,7 @@
 	<div class="form-group">
 	  <form method="GET" action={% url "new_search" %}>
 		<input class="form-control input-lg" name = "search_text" 
-		type="text" id="inputLarge" placeholder="Enter a Search Term">
+		type="text" id="inputLarge" placeholder="Enter A Search Term">
 		</input>
 		{% csrf_token %}
 	  </form> 
@@ -32,7 +32,7 @@
 	<a href= {% url "view_top" %}><button id="home-view-top" class="red-button">View Top Tweets Of All Time</button></a>
 	</div>
 	<div class="container" align="center" style="margin-top:40px">
-		<a  href={% url "home" %}> <img src="/static/images/logo.png"> </a>
+		<a  href={% url "home" %}> <img id= "roadsign-pic" src="/static/images/logo.png"> </a>
 	</div>
 	</div></div>
   </div>
