Expand FT to nav to results page, verify search term

--- a/worsttweet/templates/search_results.html
+++ b/worsttweet/templates/search_results.html
@@ -16,7 +16,7 @@
 		<a href = "http://twitter.com/{{ tweet.user_screen_name }}/">
 			@{{ tweet.user_screen_name }}</a>
 			had this to say about 
-	  <div class="top-search-term">{{ search_term }}</div>:
+	  <div class="top-search-term" id="search-result-term">{{ search_term }}</div>:
 	</h2>
 	  <blockquote class="twitter-tweet">
 		<div class="tweet-pic">
