Finish FTs, all pass. Ready for deploy

--- a/worsttweet/templates/home.html
+++ b/worsttweet/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-<title>Mean Tweet Search</title>
+<title>Meanest Tweet</title>
 {% endblock %}
 
 {% block page_content %}
