--- a/worsttweet/templates/top_tweets.html
+++ b/worsttweet/templates/top_tweets.html
@@ -6,7 +6,7 @@
 
 {% block page_content %}
 <div align="center" class="page-header">
-	<h1>TOP TWEETS OF ALL TIME</h1>
+	<h1 id="header-text">TOP TWEETS OF ALL TIME</h1>
 </div>
 {% for top_tweet, nice_term in top_tweets%}
   <div class="container">
