--- a/worsttweet/templates/search_results.html
+++ b/worsttweet/templates/search_results.html
@@ -70,7 +70,7 @@
 		<input hidden name="next_prev" value="next"></input>
 	</form>
 	{% if newly_favorited %}
-		<h2>This search result for {{ search_term }} has been added to the favorites list.</h1>
+		<h2>This tweet has been added to the favorites list.</h1>
 		{% if upvote_count == 1 %}
 		<p>You are the first person to like this tweet!</p>
 		{% else %}
