--- a/worsttweet/templates/search_results.html
+++ b/worsttweet/templates/search_results.html
@@ -77,6 +77,13 @@
 		<p>{{ upvote_count }} people have liked this same tweet!</p>
 		{% endif %}
 	{% endif %}
+	{% if favorite_button_visible == False %}
+		<h5>Share this fine tweet with your friends: <input style="width:30%; font-size:75%" readonly="readonly" 
+		value="http://andybowling.com/mean/view/{{ tweet.id }}/"></input></h5>
+	{% endif %}
+	{% if favorite_button_visible %}
+		<h4>Add this tweet to favorites to share!</h4>
+	{% endif %}
 	<div class="container">
 		<h3><a href={% url "home" %}>Search For Something Else</a> or
 		<a href={% url "view_random" %}> View Tweets Others Have Loved</a></h3>
