--- a/worsttweet/templates/search_results.html
+++ b/worsttweet/templates/search_results.html
@@ -79,7 +79,7 @@
 	{% endif %}
 	{% if favorite_button_visible == False %}
 		<h5>Share this fine tweet with your friends: <input style="width:30%; font-size:75%" readonly="readonly" 
-		value="http://andybowling.com/mean/view/{{ tweet.id }}/"></input></h5>
+		value="http://meantweet.andybowling.com/mean/view/{{ tweet.id }}/"></input></h5>
 	{% endif %}
 	{% if favorite_button_visible %}
 		<h4>Add this tweet to favorites to share!</h4>
