--- a/worsttweet/templates/view_by_id.html
+++ b/worsttweet/templates/view_by_id.html
@@ -41,7 +41,7 @@
 	  </blockquote>
 	<br>
 	<h5><br>Share this fine tweet with your friends: <input style="width:30%; font-size:75%" readonly="readonly" 
-		value="http://andybowling.com/mean/view/{{ tweet.id }}/"></input></h5>
+		value="http://meantweet.andybowling.com/mean/view/{{ tweet.id }}/"></input></h5>
 	<div class="container">
 		<h3><a href={% url "home" %}>Search For Passionate Tweets</a> or
 		<a href={% url "view_random" %}> View Tweets Others Have Loved</a></h3>
